--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dotenv": "^16.3.1",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "trpc": "^0.8.2"
   },
   "devDependencies": {
     "@types/node": "^20",
