--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
