--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.36.1",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
@@ -17,8 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.3",
-    "socket.io-client": "^4.7.3",
-    "zod": "^3.22.4"
+    "socket.io-client": "^4.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
